Fix footer alignment

--- a/src/documents/styles/_modules/footer.scss
+++ b/src/documents/styles/_modules/footer.scss
@@ -3,7 +3,6 @@ footer
     padding-top: 15px;
     margin: 0 !important;
     width: 100%;
-    height: 270px;
     @include background-image(linear-gradient(to bottom, rgba(85,85,85,1) 0%,rgba(41,41,41,1) 300px));
 
     border-top: 0;
