--- a/src/documents/styles/_modules/layout.scss
+++ b/src/documents/styles/_modules/layout.scss
@@ -1,16 +1,16 @@
 #container
 {
     @include background-image(linear-gradient(to bottom, rgba(237,237,237,1) 0%,rgba(206,206,206,1) 500px));
+    
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -270px; /* the bottom margin is the negative value of the footer's height */
+    margin: 0 0 -270px;
 }
 
 #content
 {
     padding: 25px 0;
-    margin-bottom: 270px;
 
     &:not(.no-grid){
         @include outer-container;
@@ -36,6 +36,17 @@
             }
         }
     }
+}
+
+/*#content:after
+{
+    content: "";
+    display: block;
+}*/
+
+footer, #footer_push
+{
+    height: 270px;
 }
 
 aside
